# optimizative_jabas

./: .gitignore
mo/: Copy_of_Lab_1.ipynb
mo/hw1/: task1.py  task1_vislualize.ipynb  task2.py  task2_visualize.ipynb  task4.py  task4_visualize.ipynb  task5.py  task5_visualize.ipynb  task6.py  task6_visualize.ipynb  task7.py  task7_visuaize.ipynb
mo/hw1/1d_search/: Makefile  dihotomy.cpp  fibonachi.cpp  gold_division.cpp  test  test.cpp
mo/hw1/1d_search/plots/: plots.cpp  plots.h
mo/hw1/newton/: CMakeLists.txt  holetskiy.cpp  holetskiy.h  newton.cpp  newton.h  solve_system.cpp  solve_system.h  test.cpp  utils.h  utils_v_double.cpp  utils_v_double.h
